test/sema/typeck/module/use-errors4.dora
use self::foo::bar;
fn foo() {}

//====================
// error: path expected.
// --> use-errors4.dora:1:11
//  | use self::foo::bar;
//              ~~~
//  | fn foo() {}
//  | 
// 1 error found.
